[gd_scene load_steps=6 format=3 uid="uid://0i25v3ihug1q"]

[ext_resource type="Script" path="res://scripts/for_sale.gd" id="1_kyfvb"]
[ext_resource type="Texture2D" uid="uid://dy4g3wpl3rv6h" path="res://art/PotionSprites/Potions0001.png" id="2_kwqyo"]
[ext_resource type="PackedScene" uid="uid://owhuivophvh8" path="res://scenes/hud/popup_text.tscn" id="3_naudc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fxhv1"]
size = Vector2(3.2, 66.6)

[sub_resource type="CircleShape2D" id="CircleShape2D_oco82"]
radius = 77.1622

[node name="ForSale" type="Area2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_kyfvb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.43051e-06, 112)
scale = Vector2(1, 5)
shape = SubResource("RectangleShape2D_fxhv1")
debug_color = Color(0.713726, 0.694118, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -60.88)
texture = ExtResource("2_kwqyo")

[node name="PopupText" parent="." instance=ExtResource("3_naudc")]
position = Vector2(0, -160)
scale = Vector2(1.26, 1.26)

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
position = Vector2(0, -50)
shape = SubResource("CircleShape2D_oco82")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_hover_area_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_hover_area_mouse_exited"]
